--- a/frontend/Bitki.Blazor/Components/Pages/EtnokullanimList.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/EtnokullanimList.razor
@@ -95,15 +95,14 @@
 
     private List<ColumnDef> columns = new()
 {
-new ColumnDef { Title = "ID", PropertyName = "Id" },
 new ColumnDef { Title = "Açıklama", PropertyName = "Description" },
-new ColumnDef { Title = "Lokalite ID", PropertyName = "LocalityId" }
+new ColumnDef { Title = "Lokalite", PropertyName = "LocalityName" }
 };
 
     private List<InspectorField> inspectorFields = new()
 {
-new InspectorField { Label = "ID", PropertyName = "Id", Editable = false },
 new InspectorField { Label = "Açıklama", PropertyName = "Description", Editable = true },
+new InspectorField { Label = "Lokalite", PropertyName = "LocalityName", Editable = false },
 new InspectorField { Label = "Lokalite ID", PropertyName = "LocalityId", Editable = true },
 new InspectorField { Label = "Oluşturma Tarihi", PropertyName = "CreatedDate", Editable = false }
 };
